Fixed the overflowing menu issue

--- a/styles/destination.scss
+++ b/styles/destination.scss
@@ -103,6 +103,7 @@
         }
         @media screen and (max-width: $desktop) {
             justify-content: space-evenly;
+            margin-bottom: 58px;
         }
         @media screen and (max-width: $tablet) {
             flex-direction: column;
