--- a/styles/technology.scss
+++ b/styles/technology.scss
@@ -94,6 +94,7 @@
         }
         @media screen and (max-width: $tablet) {
             font-size: 0.9375rem;
+            margin-bottom: 80px;
         }
     }
     &__tabs-and-info {
